<resources>
	<string name="app_name">TrackR</string>
	<string name="insights">Insights</string>
	<string name="home">Home</string>
	<string name="calendar">Calendar</string>
	<string name="favourites">Favourites</string>
	<string name="edit">Edit</string>
	<string name="all_activities">All activities</string>
	<string name="add_a_new_activity">Add a new activity</string>
	<string name="save">Save</string>
	<string name="tap_to_change_icon_and_color">Tap to change icon and color</string>
	<string name="name_of_the_activity">Name of the activity</string>
	<string name="default_salary">Default salary</string>
	<string name="type_of_the_activity">Type of the activity</string>
	<string name="default_period">Default period</string>
	<string name="default_time_range">Default time range</string>
	<string name="cancel">Cancel</string>
	<string name="salary_formatted">%1$.2f %2$s / %3$s</string>
	<string name="salary">Salary</string>
	<string name="unset">Unset</string>
	<string name="time_based">Time based</string>
	<string name="period_based">Period based</string>
	<string name="one_time">One time</string>
	<string name="period_formatted">%1$dh %2$02dm</string>
	<string name="period">Period</string>
	<string name="time_range_formatted">%1$2d:%2$02d - %3$2d:%4$02d</string>
	<string name="time_formatted">%1$2d:%2$02d</string>
	<string name="time">Time</string>
	<string name="one_time_description">If you want to track an activity but it doesn’t matter when or for how long it will last.</string>
	<string name="period_based_description">Allows you to specify a time period describing how long an activity will last.</string>
	<string name="time_based_description">Select start and end time of the activity.</string>
	<string name="weekday_availability">Weekday availability</string>
	<string name="ask_me_every_time">Ask me every time</string>
	<string name="select_time_range">Select time range</string>
	<string name="select_activity_type">Select activity type</string>
	<string name="select_time_period">Select time period</string>
	<string name="select_time">Select time</string>
	<string name="clear">Clear</string>
	<string name="specify_salary">Specify salary</string>
	<string name="amount">Amount</string>
	<string name="unit">Unit</string>
	<string name="type">Type</string>
	<string name="per_hour">Per hour</string>
	<string name="per_day">Per day</string>
	<string name="per_week">Per week</string>
	<string name="per_month">Per month</string>
	<string name="per_occurrence">Per occurrence</string>
	<string name="per_hour_abbrev">h</string>
	<string name="per_day_abbrev">day</string>
	<string name="per_week_abbrev">week</string>
	<string name="per_month_abbrev">month</string>
	<string name="per_occurrence_abbrev">occur.</string>
	<string name="pound">Pound</string>
	<string name="pln">PLN</string>
	<string name="euro">Euro</string>
	<string name="dollar">Dollar</string>
	<string name="salary_unit">%1$s (%2$s)</string>
	<string name="select_salary_unit">Select salary unit</string>
	<string name="select_salary_type">Select salary type</string>
	<string name="weekday_0_abbrev">Mon</string>
	<string name="weekday_1_abbrev">Tue</string>
	<string name="weekday_2_abbrev">Wed</string>
	<string name="weekday_3_abbrev">Thu</string>
	<string name="weekday_4_abbrev">Fri</string>
	<string name="weekday_5_abbrev">Sat</string>
	<string name="weekday_6_abbrev">Sun</string>
	<string name="select_weekdays">Select weekdays</string>
	<string name="cannot_be_empty">Cannot be empty</string>
	<string name="confirm">Confirm</string>
	<string name="discard_all_changes">Discard all changes</string>
	<string name="discard_add_activity">Do you really want to remove this activity? You won\'t be able to recover it.</string>
	<string name="add">Add</string>
	<string name="added_activity_to_calendar">Added %s to the calendar</string>
	<string name="undo">Undo</string>
	<string name="date">Date</string>
	<string name="date_formatted">%1$td.%1$tm.%1$tY</string>
	<string name="select_date">Select date</string>
	<string name="income_formatted">+%1$.2f %2$s</string>
	<string name="have_to_be_set_to_per_occurrence">Have to be set to "Per occurrence"</string>
	<string name="income">Income</string>
	<string name="delete">Delete</string>
	<string name="you_have_no_favourites">You have no favourites!</string>
	<string name="tap_here_to_add_one">Tap here to add one</string>
	<string name="or_hide_section">Or hide section</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="hide_favourites_section_description">Do you really want to hide this section? You always can show it again from the settings.</string>
	<string name="drag_and_drop_to_rearrange">Drag and drop to rearrange</string>
	<string name="log_out">Log out</string>
	<string name="log_in_with_google">Log in with Google</string>
	<string name="unlock_features_like_cloud_synchronization">Unlock features like cloud synchronization</string>
	<string name="log_in">Log in</string>
	<string name="automatically_synchronize">Automatically synchronize</string>
	<string name="add_an_activity_first">You have to add an activity first.</string>
	<string name="no_activities">No activities</string>
	<string name="ok">OK</string>
	<string name="most_frequent_activity">Most frequent activity</string>
	<plurals name="hours_times_this_month">
		<item quantity="one"><![CDATA[<b>%1$d</b>h <b>%2$02d</b>m<br/><b>%3$d</b> time]]></item>
		<item quantity="other"><![CDATA[<b>%1$d</b>h <b>%2$02d</b>m<br/><b>%3$d</b> times]]></item>
	</plurals>
	<plurals name="times_this_month">
		<item quantity="one"><![CDATA[<b>%d</b> time]]></item>
		<item quantity="other"><![CDATA[<b>%d</b> times]]></item>
	</plurals>
	<string name="total_earnings">Total earnings</string>
	<string name="percent">%.0f%%</string>
	<string name="compared_to_last_month">Compared to %1$.2f %2$s last month</string>
	<string name="time_spent_this_month">Time spent this month</string>
	<string name="comparison_is_based_on_the_previous_month">Comparison is based on the previous month</string>
</resources>