<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="192dp"
	android:background="@drawable/background_rounded_16dp"
	android:backgroundTint="@android:color/transparent"
	android:outlineProvider="background">

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/containerClickable"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="?selectableItemBackground"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="@dimen/default_padding"
		app:divider="@drawable/divider_vertical_10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:showDividers="middle">


		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="48dp"
			android:layout_height="48dp"
			app:srcCompat="@drawable/ic_star"
			app:tint="@color/yellow" />

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/you_have_no_favourites"
			android:textColor="?android:textColorPrimary"
			android:textSize="18sp"
			app:fontFamily="@font/montserrat_bold"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tap_here_to_add_one"
			android:textColor="?android:textColorPrimary"
			android:textSize="14sp"
			app:fontFamily="@font/montserrat"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonHideSection"
			style="@style/MaterialButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingVertical="5dp"
			android:text="@string/or_hide_section"
			android:textColor="?android:textColorSecondary"
			android:textSize="12sp"
			app:strokeColor="?android:textColorSecondary"
			app:strokeWidth="1dp" />

	</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>