<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="320dp"
	android:layout_height="wrap_content"
	android:background="@drawable/background_rounded_16dp"
	android:backgroundTint="?colorPrimary"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:padding="@dimen/default_padding"
	app:divider="@drawable/divider_vertical_10dp"
	app:showDividers="middle">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/textTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="?android:textColorPrimary"
		android:textSize="18sp"
		app:fontFamily="@font/montserrat_bold"
		tools:text="Mobitouch" />

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/containerSalary"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:divider="@drawable/divider_horizontal_10dp"
		app:showDividers="middle">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/salary"
			android:textColor="?android:textColorPrimary"
			android:textSize="14sp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonSalary"
			style="@style/MaterialButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/default_padding"
			android:paddingVertical="@dimen/small_padding"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:textColor="?android:textColorPrimary"
			android:textColorHint="?colorSecondaryVariant"
			app:cornerRadius="4dp"
			app:strokeColor="?colorSecondaryVariant"
			app:strokeWidth="1dp"
			tools:text="35 zł / h" />

	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/containerPeriod"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:divider="@drawable/divider_horizontal_10dp"
		app:showDividers="middle">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/period"
			android:textColor="?android:textColorPrimary"
			android:textSize="14sp" />

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:orientation="vertical">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/buttonPeriod"
				style="@style/MaterialButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingHorizontal="@dimen/default_padding"
				android:paddingVertical="@dimen/small_padding"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:textColor="?android:textColorPrimary"
				android:textColorHint="?colorSecondaryVariant"
				app:cornerRadius="4dp"
				app:strokeColor="?colorSecondaryVariant"
				app:strokeWidth="1dp"
				tools:text="01h 30m" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/buttonPeriodErrorLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cannot_be_empty"
				android:textColor="@color/text_red"
				android:textSize="12sp"
				android:visibility="gone" />

		</androidx.appcompat.widget.LinearLayoutCompat>

	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/containerTimeRange"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:divider="@drawable/divider_horizontal_10dp"
		app:showDividers="middle">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/time"
			android:textColor="?android:textColorPrimary"
			android:textSize="14sp" />

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:orientation="vertical">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/buttonTimeRange"
				style="@style/MaterialButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingHorizontal="@dimen/default_padding"
				android:paddingVertical="@dimen/small_padding"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:textColor="?android:textColorPrimary"
				android:textColorHint="?colorSecondaryVariant"
				app:cornerRadius="4dp"
				app:strokeColor="?colorSecondaryVariant"
				app:strokeWidth="1dp"
				tools:text="08:30 - 15:30" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/buttonTimeRangeErrorLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cannot_be_empty"
				android:textColor="@color/text_red"
				android:textSize="12sp"
				android:visibility="gone" />

		</androidx.appcompat.widget.LinearLayoutCompat>

	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/containerDate"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:divider="@drawable/divider_horizontal_10dp"
		app:showDividers="middle">

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/date"
			android:textColor="?android:textColorPrimary"
			android:textSize="14sp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonDate"
			style="@style/MaterialButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/default_padding"
			android:paddingVertical="@dimen/small_padding"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:textColor="?android:textColorPrimary"
			android:textColorHint="?colorSecondaryVariant"
			app:cornerRadius="4dp"
			app:strokeColor="?colorSecondaryVariant"
			app:strokeWidth="1dp"
			tools:text="18.03.2021" />

	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:orientation="horizontal">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonCancel"
			style="@style/MaterialButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingHorizontal="20dp"
			android:text="@string/cancel"
			android:textColor="?android:textColorSecondary" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonAdd"
			style="@style/MaterialButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingHorizontal="20dp"
			android:text="@string/add"
			android:textColor="?android:textColorPrimary"
			app:fontFamily="@font/montserrat_bold" />

	</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>